# netsaur

./: .gitignore  .gitpod.Dockerfile  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.zig  deno.json  deno.jsonc  deps.ts  import_map.json  linear.ts  mod.ts  test.ts  types.ts  web.ts
backends/: cpu.ts  gpu.ts  native.ts
bench/: netsaur_cpu.ts  netsaur_wasm.ts  package-lock.json  torch_cpu.py  xor.py
core/: engine.ts  error.ts  init.ts  mod.ts  ops.ts  tensor.ts  types.ts  util.ts
core/ops/: cost.ts  (+1 more)
crates/: README.md
crates/core/: Cargo.toml
crates/core-gpu/: Cargo.toml
crates/core-gpu/src/: ffi.rs  lib.rs  tensor.rs  types.rs
crates/core-gpu/src/gpu/: activation.rs  backend.rs  cost.rs  gpu.rs  init.rs  mod.rs
crates/core-gpu/src/gpu/layers/: activation.rs  batchnorm1d.rs  batchnorm2d.rs  conv2d.rs  convtrans2d.rs  dense.rs  dropout.rs  flatten.rs  mod.rs  pool2d.rs
crates/core-gpu/src/gpu/optimizers/: adam.rs  mod.rs  sgd.rs
crates/core-gpu/src/gpu/schedulers/: decay.rs  mod.rs  oc.rs
crates/core-modular/: Cargo.toml
crates/core-modular/src/: ffi.rs  ffi_modular.rs  lib.rs  types.rs  wasm.rs
crates/core-modular/src/cpu/: backend.rs  cost.rs  mod.rs
crates/core-modular/src/cpu/layers/: batchnorm1d.rs  batchnorm2d.rs  conv2d.rs  dense.rs  dropout.rs  flatten.rs  lstm.rs  mod.rs  pool2d.rs
crates/core-modular/src/cpu/optimizers/: adam.rs  mod.rs  nadam.rs  rmsprop.rs  sgd.rs
crates/core/src/: ffi.rs  lib.rs  types.rs  util.rs  wasm.rs
crates/core/src/cpu/: activation.rs  backend.rs  cost.rs  layer_norm.rs  mod.rs  regularizer.rs
crates/core/src/cpu/layers/: activation.rs  batchnorm2d.rs  conv2d.rs  convtrans2d.rs  dense.rs  dropout.rs  embedding.rs  flatten.rs  lstm.rs  mod.rs
crates/core/src/cpu/optimizers/: adam.rs  mod.rs  nadam.rs  rmsprop.rs  sgd.rs
crates/core/src/cpu/postprocessing/: mod.rs  step.rs
crates/core/src/cpu/schedulers/: decay.rs  mod.rs  oc.rs
crates/core/src/gpu/: activation.rs  cost.rs  mod.rs
crates/core/src/gpu/layers/: activation.rs  conv2d.rs  flatten.rs
crates/core/src/gpu/optimizers/: adam.rs  sgd.rs
crates/tokenizers/: Cargo.toml
crates/tokenizers/src/: lib.rs  util.rs  wasm.rs
data/: csv.ts  data.ts  deps.ts  mod.ts  types.ts
docs/: pyro.yml
examples/: bench.js  bench.ts  boston_housing_train.ts  linear.ts  linear_cpu.ts  linear_wasm.ts  main.rs  perf_test.ts  test.ts  train_conv.ts  train_digits_conv.ts  train_emoticon.ts  train_emotion.ts  train_letter.ts  train_xor.ts  train_xor_cpu.ts  train_xor_gpu.ts  train_xor_native.ts  train_xor_netless.ts  train_xor_wasm.ts  visualize.ipynb  which_letter_simple.ts  xor.ipynb  xor_auto.ts  xor_cpu.ts  xor_gpu.ts  xor_option.ts  xor_wasm.ts
layers/: conv.ts  dense.ts  mod.ts  pool.ts
lib/: netsaur_bg.wasm
metadata/: metadata.nsmd
model/: json.ts  keras.ts  mod.ts  types.ts
native/: CMakeLists.txt
native/include/: activation.h  cost.h  layer.h  matrix.h  network.h  util.h
native/src/: activation.c  cost.c  main.c  matrix.c  network.c  util.c
native/src/layers/: common.c  conv2d.c  dense.c  maxpool2d.c
plugins/: types.ts
rc/: idea.ts
rust/: Cargo.toml
src/: activation.ts  context.zig  lib.rs  loss.ts  main.zig  mod.ts  network.rs  ops.zig  tensor.zig  types.rs  types.ts  util.ts
src/rust/: Cargo.toml
src/rust/src/: ffi.rs  lib.rs  types.rs  util.rs  wasm.rs
src/rust/src/backend/: activation.rs  backend.rs  layer.rs  mod.rs
src/rust/src/cpu/: backend.rs  init.rs  layer.rs  mod.rs
src/rust/src/cpu/layers/: conv2d.rs  dropout1d.rs  dropout2d.rs  flatten.rs  pool2d.rs
src/rust/src/layers/: activation.rs  dense.rs  mod.rs
tests/: conv.ts  cpu.test.ts  cpu_back_propagate.test.ts  cpu_feed_forward.test.ts  cpu_matrix_multiply.test.ts  gpu_back_propagate.test.ts  gpu_feed_forward.test.ts  linear.ts  model.test.ts  model_cpu.test.ts  model_wasm.test.ts  test_pool.ts  test_xor.ts  wasm.test.ts
tokenizers/: mod.ts
(+258 files in other folders)
