[package]
edition = "2021"
name = "netsaur-gpu"
version = "0.2.15"

[lib]
crate-type = ["cdylib"]


[dependencies]
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
safetensors = "0.4.0"
thiserror = "1.0.49"
wgpu = "0.18.0"
pollster = "0.3.0"
