[package]
edition = "2021"
name = "netsaur-gpu"
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
cudarc = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
