[package]
edition = "2021"
name = "netsaur-tokenizers"
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6.0"
tokenizers = { version="0.20.0", default-features=false, features = ["unstable_wasm"]}
wasm-bindgen = "0.2.92"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.69"
