[package]
edition = "2021"
name = "netsaur"
version = "0.2.5"

[lib]
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.84"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.61"
